# clawserver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: auth.rs  error.rs  lib.rs  metrics.rs  server.rs  stream.rs
api/tests/: api.rs  dto.rs
cli/: Cargo.toml
cli/src/: builtin.rs  yaml_cfg.rs
cli/src/cmd/: agent.rs  bench.rs  config.rs  llm.rs  skill.rs  tool.rs
config/: api_keys.yaml  config.yaml
config/skills/code_reviewer/: instruction.md  manifest.yaml
config/tasks/: chat.yaml  code_review.yaml  headset_interpret.yaml  query.yaml  record_minutes.yaml  record_summary.yaml  record_todo.yaml  translate.yaml
config/users/u001/: AGENT.md  MEMORY.md  RULES.md  SOULD.md
crates/claw-agent/: Cargo.toml
crates/claw-agent/src/: engine.rs  lib.rs  memory.rs  react.rs  task.rs
crates/claw-agent/src/skill/: loader.rs  mod.rs  registry.rs
crates/claw-agent/src/tools/builtin/: http_get.rs  mod.rs  time_now.rs  web_search.rs
crates/claw-agent/tests/: react.rs  task_registry.rs
crates/claw-api/: Cargo.toml
crates/claw-api/src/: dto.rs  lib.rs  server.rs  stream.rs
crates/claw-api/tests/: api.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: builtin.rs  main.rs  yaml_cfg.rs
crates/claw-cli/src/cmd/: agent.rs  bench.rs  config.rs  llm.rs  mod.rs  server.rs  tool.rs
crates/claw-config/: Cargo.toml
crates/claw-config/src/: lib.rs
crates/claw-config/tests/: yaml.rs
crates/claw-core/: Cargo.toml
crates/claw-core/src/: buffer.rs  chat.rs  config.rs  error.rs  lib.rs  llm.rs  test_utils.rs  tool.rs  user_memory.rs
crates/claw-core/src/skill/: loader.rs  mod.rs  registry.rs
crates/claw-core/src/tools/: mod.rs
crates/claw-core/src/tools/builtin/: http_get.rs  mod.rs  time_now.rs  web_search.rs
crates/claw-core/src/util/: breaker.rs  mod.rs  retry.rs
crates/claw-core/tests/: builtin_tools.rs  error.rs  skill.rs  tool_registry.rs  util.rs
crates/claw-llm/: Cargo.toml
crates/claw-llm/src/: chat.rs  client.rs  config.rs  lib.rs  llm.rs  test_utils.rs  tool.rs
crates/claw-llm/src/util/: breaker.rs  mod.rs  retry.rs
crates/claw-llm/tests/: pool.rs
crates/claw-memory/: Cargo.toml
crates/claw-memory/src/: lib.rs
crates/claw-types/: Cargo.toml
crates/claw-types/src/: buffer.rs  config.rs  error.rs  lib.rs
crates/claw-types/tests/: yaml.rs
deploy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
examples/: mock_llm.rs
src/: main.rs
