[package]
name = "claw-agent"
description = "ClawServer Agent 编排：AgentEngine + SessionMemory(Redis) + ReAct + Skill/工具"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claw-types = { path = "../claw-types" }
claw-llm    = { path = "../claw-llm" }
claw-memory = { path = "../claw-memory" }

serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = "0.9"
tracing     = { workspace = true }

tokio        = { version = "1.38", features = ["rt", "sync", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = { workspace = true }
async-trait  = { workspace = true }

pin-project-lite = "0.2"

# Redis 异步客户端
fred = { version = "9.2", default-features = false, features = [
    "enable-rustls",
    "metrics",
    "i-std",
    "i-hashes",
    "i-keys",
    "i-lists",
    "i-scripts",
    "i-client",
] }

# 可选：内置 http_get 工具（引入 reqwest）
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
], optional = true }

[features]
default = []
tools-http = ["dep:reqwest"]

[dev-dependencies]
claw-llm  = { path = "../claw-llm", features = ["test-utils"] }
tokio     = { version = "1.38", features = ["rt", "macros", "time", "sync"] }
serde_yaml = "0.9"
