[package]
name = "claw-config"
description = "ClawServer 配置向后兼容重新导出（类型定义在 claw-core）。"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claw-core = { path = "../claw-core", features = ["yaml"] }

[dev-dependencies]
serde_yaml = "0.9"
tempfile   = "3"
