[package]
name = "claw-llm"
description = "ClawServer LLM 客户端：OpenAI 兼容流式 chat + 全局 LlmPool。"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claw-core   = { path = "../claw-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true, features = ["sync", "time", "rt", "macros"] }
bytes       = "1"
ulid        = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
] }
