[package]
name = "claw-llm"
description = "ClawServer LLM 客户端：ChatProvider trait + 连接池 + 熔断重试"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claw-types = { path = "../claw-types" }

serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true, features = ["sync", "time", "rt", "macros"] }
bytes       = "1"
ulid        = "1"
rand        = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
] }

[features]
default = []
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
