[package]
name = "claw-types"
description = "ClawServer 基础类型：AppError + 配置结构体 + BufferConfig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
serde_yaml  = "0.9"
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
serde_yaml = "0.9"
tempfile   = "3"
